heading content and paragraph change, js alert change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <header id="top">
-            <h1 class="green-header"> Justyna Bodurka- Strona domowa</h1>
+            <h1 class="green-header"> Justyna Bodurka- Dziennik postępów nauki</h1>
         </header>
 
 
