--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="pink-background">
+    <header class="navigation-background">
         <nav>
             <a href="nauka-html.html">Nauka html</a>
             <a href="index.html">Strona główna</a>
