--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     <em>mała</em> przerwa nie narobi za dużego bałaganu.
 
                 </h3>
+                <p>W ramach ćwiczeń w dzisiejszym tygodniu instalujemy gita i zakładamy konto na GitHub</p>
 
             </article>
         </section>
