changing main navigation style, adding class box,footer style change

--- a/nauka-html.html
+++ b/nauka-html.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header class="navigation-background">
+    <header class="main-navigation">
+    
         <nav>
             <a href="index.html">Strona główna</a>
             <a href="nauka-html.html">Nauka html</a>
@@ -20,13 +21,14 @@
 
     </header>
     <main>
+        <div class="box">
         <header id="top">
             <h1> Justyna Bodurka- Nauka html</h1>
             <img src="tenor.gif" alt="tak się czuję" />
         </header>
 
 
-        <section>
+        <section class="background">
 
             <h2 class="green-header">Nowopoznane tagi</h2>
 
@@ -41,7 +43,7 @@
 
 
 
-
+    </div>
     </main>
     <footer class="footer">
 
