--- a/brak-pomyslu.html
+++ b/brak-pomyslu.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <header class="navigation-background">
+    <header class="main-navigation">
+    
         <nav>
 
             <a href="index.html">Strona główna</a>
@@ -21,6 +22,7 @@
 
     </header>
     <main>
+        <div class="box">
         <header id="top">
             <h1 class="green-header"> Justyna Bodurka- Różności.</h1>
         </header>
@@ -49,7 +51,7 @@
         </section>
 
 
-
+    </div>
     </main>
     <footer class="footer">
 
