--- a/index.html
+++ b/index.html
@@ -10,80 +10,81 @@
 </head>
 
 <body>
-    <header class="navigation-background">
+    <header class="main-navigation">
         <nav>
+            <b>
             <a href="nauka-html.html">Nauka html</a>
             <a href="index.html">Strona główna</a>
             <a href="prace-domowe.html">Prace domowe</a>
             <a href="brak-pomyslu.html">Brak pomysłu</a>
+        </b>
         </nav>
 
     </header>
     <main>
-        <header id="top">
-            <h1 class="green-header"> Justyna Bodurka- Dziennik postępów nauki</h1>
-        </header>
+        <div class="box">
+            <header id="top">
+                <h1 class="green-header"> Justyna Bodurka- Dziennik postępów nauki</h1>
+            </header>
 
 
-        <section>
+            <section>
 
-            <h2>Kim jestem?</h2>
+                <h2>Kim jestem?</h2>
 
-            <img src="justyna-zdjecie.jpg" alt="Justyna i Adaś" />
+                <img src="justyna-zdjecie.jpg" alt="Justyna i Adaś" />
 
-            <p>Hej! </p>
-            <p>Na co dzień jestem mamą małego łobuza Adasia, który ma 5 lat i <em>mnóstwo energii</em> . <br />
-                Zawodowo zajmuję
-                się stylizacją rzęs. Poza tym <b>uwielbiam biegać i ćwiczyć jogę</b>.<br />
-                Tworzę te stronę w ramach zadania
-                domowego, mając nadzieję że nie będzie totalna porażką <a href="#notatki">przejdź do notatek</a>.
+                <p>Hej! </p>
+                <p>Na co dzień jestem mamą małego łobuza Adasia, który ma 5 lat i <em>mnóstwo energii</em> . <br />
+                    Zawodowo zajmuję
+                    się stylizacją rzęs. Poza tym <b>uwielbiam biegać i ćwiczyć jogę</b>.<br />
+                    Tworzę te stronę w ramach zadania
+                    domowego, mając nadzieję że nie będzie totalna porażką <a href="#notatki">przejdź do notatek</a>.
 
-        </section>
-        <section id="notatki">
-            <h2 class="turcus-header">Notatki z postępów w nauce</h2>
-
-
-
-            <article>
-                <h3 class="red-header">Skąd pomysł nauki programowania?</h3>
-
-                <p>Ostatnio w skutek <i>pandemii</i> mam trochę więcej czasu, postanowiłam więc nie marnować go na
-                    facebooku,
-                    lecz pouczyć się czegoś nowego, co być może za jakiś czas przy odpowiednim nakładzie pracy
-                    przyniesie efekty w postaci lepszego zrozumienia zagadnień i być może <strong>zmiany drogi kariery
-                    </strong> -
-                    zobaczymy. Korzystam ze szkolenia <a href="https://cotenfrontend.pl">WTF</a>
-                </p>
-            </article>
-
-            <article>
-
-                <h3 class="background">Na jakim etapie jestem?</h3>
-
-
-                <p>Na dzień 04.11 jestem całkowicie zielona w kwestii jakiegokolwiek języka programowania i lekko
-                    przerażona tematem, ale jednocześnie jestem bardzo zdeterminowana do nauki. W ramach zadania
-                    domowego będę wprowadzać na tej stronie jakieś treści – postępy w nauce, ale nie tylko.
-                </p>
-            </article>
-            <article>
-                <h3>Mamy 11.01.2021, po dwóch miesiącach przerwy wznawiam naukę nad HTML i CSS, mam nadzieję, że ta
-                    <em>mała</em> przerwa nie narobi za dużego bałaganu.
-
-                </h3>
-                <p>W ramach ćwiczeń w dzisiejszym tygodniu instalujemy gita i zakładamy konto na GitHub</p>
-
-            </article>
-        </section>
+            </section>
+            <section id="notatki">
+                <h2 class="turcus-header">Notatki z postępów w nauce</h2>
 
 
 
+                <article>
+                    <h3 class="red-header">Skąd pomysł nauki programowania?</h3>
+
+                    <p>Ostatnio w skutek <i>pandemii</i> mam trochę więcej czasu, postanowiłam więc nie marnować go na
+                        facebooku,
+                        lecz pouczyć się czegoś nowego, co być może za jakiś czas przy odpowiednim nakładzie pracy
+                        przyniesie efekty w postaci lepszego zrozumienia zagadnień i być może <strong>zmiany drogi kariery
+                        </strong> -
+                        zobaczymy. Korzystam ze szkolenia <a href="https://cotenfrontend.pl">WTF</a>
+                    </p>
+                </article>
+
+                <article>
+
+                    <h3 class="background">Na jakim etapie jestem?</h3>
+
+
+                    <p>Na dzień 04.11 jestem całkowicie zielona w kwestii jakiegokolwiek języka programowania i lekko
+                        przerażona tematem, ale jednocześnie jestem bardzo zdeterminowana do nauki. W ramach zadania
+                        domowego będę wprowadzać na tej stronie jakieś treści – postępy w nauce, ale nie tylko.
+                    </p>
+                </article>
+                <article>
+                    <h3>Mamy 11.01.2021, po dwóch miesiącach przerwy wznawiam naukę nad HTML i CSS, mam nadzieję, że ta
+                        <em>mała</em> przerwa nie narobi za dużego bałaganu.
+
+                    </h3>
+                    <p>W ramach ćwiczeń w dzisiejszym tygodniu instalujemy gita i zakładamy konto na GitHub</p>
+
+                </article>
+            </section>
+         </div>
     </main>
     <footer class="footer">
 
         Celem jest obycie się z podstawami HTML i CSS. <a href="#top">wróć do góry</a>
     </footer>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
        
     
 </body>
