--- a/nauka-html.html
+++ b/nauka-html.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
 <html lang="pl">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header class="main-navigation">
-    
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="nauka-html.html">Nauka html</a>
-            <a href="prace-domowe.html">Prace domowe</a>
-            <a href="brak-pomyslu.html">Brak pomysłu </a>
-        </nav>
-
+      <nav>
+        <a class="main-navigation__link" href="index.html">Strona główna</a>
+        <a class="main-navigation__link" href="nauka-html.html">Nauka html</a>
+        <a class="main-navigation__link" href="prace-domowe.html">Prace domowe</a>
+        <a class="main-navigation__link" href="brak-pomyslu.html">Brak pomysłu </a>
+      </nav>
     </header>
     <main>
-        <div class="box">
+      <div class="main">
         <header id="top">
-            <h1> Justyna Bodurka- Nauka html</h1>
-            <img src="tenor.gif" alt="tak się czuję" />
+          <h1 class= "main__title">Justyna Bodurka- Nauka html</h1>
+          <img src="tenor.gif" alt="tak się czuję" />
         </header>
 
+        <section>
+          <h2 class="green-header">Nowopoznane tagi</h2>
 
-        <section class="background">
+          <article>
+            <h3>b,br,i, em, a href,id</h3>
 
-            <h2 class="green-header">Nowopoznane tagi</h2>
-
-            <article>
-                <h3>b,br,i, em, a href,id</h3>
-
-                <p>to są tagi, które dziś poznałam </p>
-            </article>
-
+            <p>to są tagi, które dziś poznałam</p>
+          </article>
         </section>
-
-
-
-
-    </div>
+      </div>
     </main>
     <footer class="footer">
-
-        Celem jest obycie się z podstawami HTML i CSS. <a href="#top">wróć do góry</a>
+      Celem jest obycie się z podstawami HTML i CSS.
+      <a href="#top">wróć do góry</a>
     </footer>
-</body>
-
+  </body>
 </html>
