adding inner.HTML

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               zakładamy konto na GitHub
             </p>
           </article>
+          <h2 class="article__title article__title--js"></h2>
         </section>
       </div>
     </main>
@@ -91,6 +92,6 @@
       Celem jest obycie się z podstawami HTML i CSS.
       <a href="#top">wróć do góry</a>
     </footer>
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script> -->
   </body>
 </html>
