section class added, BEM changed, css grid added

--- a/brak-pomyslu.html
+++ b/brak-pomyslu.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -18,16 +19,16 @@
     </header>
     <main>
       <div class="main">
-        <header id="top">
-          <h1 class="main__title">Justyna Bodurka- Różności.</h1>
+        <header class="main__title" id="top">
+          <h1 >Justyna Bodurka- Różności.</h1>
         </header>
 
-        <section>
-          <h2 class="article__title">Kim jestem?</h2>
-          <img src="justyna-wakacje.jpg" alt="tęskno" />
+        <section class="articles-list">
+          <h2 class= "articles-list__title">Kim jestem?</h2>
+          <img class= "article-list__picture" src="img/justyna-wakacje.jpg" alt="tęskno" />
         </section>
-        <section>
-          <h2 class ="article__title">Bo musi być jakis tekst, a nie wiem co pisać</h2>
+        <section class="articles-list articles-list--grid">
+          <h2 class= "articles-list__title">Bo musi być jakis tekst, a nie wiem co pisać</h2>
 
           <article class="article">
             <h3 class=" article__title article__title--less-important">zaraz dodam zdjęcia i jak zdąże to w css klasy.</h3>
