--- a/nauka-html.html
+++ b/nauka-html.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -18,18 +19,20 @@
     </header>
     <main>
       <div class="main">
-        <header id="top">
-          <h1 class= "main__title">Justyna Bodurka- Nauka html</h1>
-          <img src="tenor.gif" alt="tak się czuję" />
+        <header class= "main__title" id="top">
+          <h1 >Justyna Bodurka- Nauka html</h1>
+          
         </header>
 
-        <section>
-          <h2 class="green-header">Nowopoznane tagi</h2>
+        <section class="articles-list">
+          
+          <h2 class="articles-list__title">Nowopoznane tagi</h2>
+          <img class= "article-list__picture" src="img/tenor.gif" alt="tak się czuję" />
 
-          <article>
-            <h3>b,br,i, em, a href,id</h3>
+          <article class= "article ">
+            <h3 class="article__title">b,br,i, em, a href,id</h3>
 
-            <p>to są tagi, które dziś poznałam</p>
+            <p class="article__description">to są tagi, które dziś poznałam</p>
           </article>
         </section>
       </div>
