--- a/prace-domowe.html
+++ b/prace-domowe.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <header class="main-navigation">
-      <nav>
+    <header class="main-navigation__wrapper" >
+      <nav class="main-navigation" >
         <a class="main-navigation__link" href="index.html">Strona główna</a>
         <a class="main-navigation__link" href="nauka-html.html">Nauka html</a>
         <a class="main-navigation__link" href="prace-domowe.html">Prace domowe</a>
@@ -18,17 +19,17 @@
     </header>
     <main>
       <div class="main">
-        <header id="top">
-          <h1 class="main__title">Justyna Bodurka- Prace domowe.</h1>
+        <header class= "main__title" id="top">
+          <h1 >Justyna Bodurka- Prace domowe.</h1>
         </header>
 
-        <section>
-          <h2 class= "article__title">Kim jestem?</h2>
+        <section class="articles-list">
+          <h2 class="articles-list__title" >Kim jestem?</h2>
           
-          <img src="justyna-pienza.jpg"  class ="article__img"alt="oto ja" />
+          <img class= "article-list__picture" src="img/justyna-pienza.jpg"  alt="oto ja" />
         </section>
-        <section >
-          <h2 class= "article__title">Notatki z postępów w nauce</h2>
+        <section class="articles-list articles-list--grid">
+          <h2 class="articles-list__title">Notatki z postępów w nauce</h2>
 
           <article class="article">
             <h3 class= "article__title article__title--less-important">
@@ -37,7 +38,7 @@
           </article>
 
           <article class="article">
-            <h3 class="article__title article__title">Na jakim etapie jestem?</h3>
+            <h3 class="article__title">Na jakim etapie jestem?</h3>
 
             <p class="article__description">
               Stworzyłam kilka podstron oraz nawigację między nimi, do każdej
