media queries done, hamburger menu done

--- a/brak-pomyslu.html
+++ b/brak-pomyslu.html
@@ -32,7 +32,7 @@
 
           <article class="article">
             <h3 class=" article__title article__title--less-important">zaraz dodam zdjęcia i jak zdąże to w css klasy.</h3>
-            <p class= "article__description">
+            <p class= "article__description article__description--js">
               wstałam o niemożliwej godzinie żeby to zrobić, weny brak a jakis
               tekst musi być
             </p>
