--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Strona domowa</title>
     <link href="css/normalize.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <header class="main-navigation__wrapper">
-      <nav  class="main-navigation">
-        <a class="main-navigation__link " href="index.html">Strona główna</a>
+    <header  class="main-navigation__wrapper">
+      <button class= "hamburger hamburger--js" aria-label="Otwórz menu"> 🍔 </button>
+      <nav class="main-navigation main-navigation--js">
+        <a class="main-navigation__link" href="index.html">Strona główna</a>
         <a class="main-navigation__link" href="nauka-html.html">Nauka html</a>
         <a class="main-navigation__link" href="prace-domowe.html"
           >Prace domowe</a
@@ -20,6 +21,7 @@
           >Brak pomysłu</a
         >
       </nav>
+      
     </header>
     <main>
       <div class="main">
@@ -28,13 +30,16 @@
         </header>
 
         <section class="articles-list">
-
           <h2 class="articles-list__title">Kim jestem?</h2>
 
-          <img class= "article-list__picture" src="img/justyna-zdjecie.jpg" alt="Justyna i Adaś" />
+          <img
+            class="article-list__picture"
+            src="img/justyna-zdjecie.jpg"
+            alt="Justyna i Adaś"
+          />
 
-          <article class="article ">
-            <h3 class= "article__title article__title--less-important">
+          <article class="article">
+            <h3 class="article__title article__title--less-important">
               Hej! Na co dzień jestem mamą małego łobuza Adasia, który ma 5 lat
               i
               <em>mnóstwo energii</em>
@@ -43,13 +48,16 @@
               Zawodowo zajmuję się stylizacją rzęs. Poza tym
               <b>uwielbiam biegać i ćwiczyć jogę</b>.<br />
               Tworzę te stronę w ramach zadania domowego, mając nadzieję że nie
-              będzie totalna porażką <a class= "article__link" href="#notatki">przejdź do notatek</a>.
+              będzie totalna porażką
+              <a class="article__link" href="#notatki">przejdź do notatek</a>.
             </p>
           </article>
         </section>
 
-        <section class = "articles-list articles-list--grid" id="notatki">
-          <h2 class="articles-list__title">Notatki z postępów w nauce</h2>
+        <section class="articles-list articles-list--grid" id="notatki">
+          <h2 class="articles-list__title articles-list__title--js">
+            Notatki z postępów w nauce
+          </h2>
 
           <article class="article">
             <h3 class="article__title">Skąd pomysł nauki programowania?</h3>
@@ -61,7 +69,7 @@
               nakładzie pracy przyniesie efekty w postaci lepszego zrozumienia
               zagadnień i być może <strong>zmiany drogi kariery </strong> -
               zobaczymy. Korzystam ze szkolenia
-              <a class= "article__link" href="https://cotenfrontend.pl">WTF</a>
+              <a class="article__link" href="https://cotenfrontend.pl">WTF</a>
             </p>
           </article>
 
@@ -94,6 +102,7 @@
       Celem jest obycie się z podstawami HTML i CSS.
       <a class="footer__link" href="#top">wróć do góry</a>
     </footer>
-    <script src="main.js"></script> -->
+    <script src="main.js"></script>
+    -->
   </body>
 </html>
