sccs style change

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           <h1>Justyna Bodurka- Dziennik postępów nauki</h1>
         </header>
 
-        <section class="articles-list">
-          <h2 class="articles-list__title">Kim jestem?</h2>
+        <section class="article-list">
+          <h2 class="article-list__title">Kim jestem?</h2>
 
           <img
             class="article-list__picture"
@@ -54,8 +54,8 @@
           </article>
         </section>
 
-        <section class="articles-list articles-list--grid" id="notatki">
-          <h2 class="articles-list__title articles-list__title--js">
+        <section class="article-list article-list--grid" id="notatki">
+          <h2 class="article-list__title article-list__title--js">
             Notatki z postępów w nauce
           </h2>
 
